examples/diagnostics/errors/ModuleScriptCodeError.flx
module Errors.ModuleScriptCodeError { fn value() { 1; } }
1;
